Device Logging change with azure infa change, service and webui changes

--- a/src/webui/public/locales/en/translations.json
+++ b/src/webui/public/locales/en/translations.json
@@ -857,6 +857,7 @@
         "title": "Maintenance",
         "total": "Total",
         "warning": "Warning",
+        "deviceLogs": "Device Logs",
         "alertGrid": {
             "totalCount": "Total count",
             "open": "Open",
